<resources>
    <string name="app_name">Photo Blog</string>
    <string name="loginactivity_tv_login">Login</string>
    <string name="loginactivity_button_text_login">Login</string>
    <string name="loginactivity_button_text_newaccount">Need a new Account? </string>
    <string name="logactivity_ed_email">enter your email</string>
    <string name="logactivity_ed_password">enter your password</string>
    <string name="loginactivity_tv_text_welcome">Welcome!</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_btn">Logout</string>
    <string name="registeractivity_tv_text_signup">Sign Up</string>
    <string name="registeractivity_hint_confirm_password">confirm password</string>
    <string name="registeractivity_hint_password">password</string>
    <string name="registeractivity_hint_email">email</string>
    <string name="registeractivity_btn_text_createaccount">Create new Account</string>
    <string name="registeractivity_btn_text_have_account">Already Have an account?</string>
    <string name="setup_ed_hint">Your Name</string>
    <string name="setup_text_btn">Save Account Settings</string>
    <string name="home_bottom">Home</string>
    <string name="notification_bottom">Notification</string>
    <string name="account_bottom">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
